--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ mobile-theme: light
       </div>
     </div>
   </div>
-  
+
   <carousel id="main">
     <div class="container">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "pageDots": false }'>
@@ -37,6 +37,15 @@ mobile-theme: light
               <h2 class="carousel-title">Merit Badge Clinic</h2>
               <p class="carousel-info">February 9; 8:30 AM - 3:00 PM</p>
               <a href="https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-cell" id="mcard2">
+          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='http://pinestraw.troop370atlanta.org'" style="background: rgba(0,0,0,0.6);">
+            <div>
+              <h2 class="carousel-title">Pine Straw Sale</h2>
+              <p class="carousel-info">Order by March 13</p>
+              <a href="http://pinestraw.troop370atlanta.org" class="mdc-button standard-light-button mdc-button--outlined">Online store</a>
             </div>
           </div>
         </div>
