swap back to default layout with collapsible-header:true

--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 title: Camps/High Adventure
+subtitle: This page provides information about summer/winter camps, high adventure camps, and other special trips (for example, Bridges Uganda).  Registration, dates and other information can be found in either the event descriptions below or via the <a href="calendar_encrypted.html" target="_self">troop calendar</a>.  Information about the Troop's regular overnight trips can on the <a href="calendar_encrypted.html" target="_self">troop calendar</a> or on the <a href="campout-schedule-local-events.html" target="_self">campout schedule page</a>.
 theme: colorful
 mobile-theme: colorful
+collapsible-header: true
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -11,12 +13,6 @@ mobile-theme: colorful
   </head>
   </style>
   <body>
-    <div class="banner">
-      <div class="container">
-        <h3 class="size8 hide-mobile">Camps/High Adventure</h3>
-        <p>This page provides information about summer/winter camps, high adventure camps, and other special trips (for example, Bridges Uganda).  Registration, dates and other information can be found in either the event descriptions below or via the <a href="calendar_encrypted.html" target="_self">troop calendar</a>.  Information about the Troop's regular overnight trips can on the <a href="calendar_encrypted.html" target="_self">troop calendar</a> or on the <a href="campout-schedule-local-events.html" target="_self">campout schedule page</a>.</p>
-      </div>
-    </div>
     <div class="banner red">
       <div class="container">
         <h3 class="size8">2019 Camps & High Adventure</h3>
