--- a/leadership-training.html
+++ b/leadership-training.html
@@ -1,8 +1,9 @@
 ---
-layout: collapsing_header
+layout: default
 title: Leadership Training
 theme: colorful
 mobile-theme: light
+collapsible-header: true
 ---
 <!DOCTYPE html>
 <html lang="en">
