--- a/payments.html
+++ b/payments.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 title: Payments
+subtitle: Choose one of the payment options below to pay for Troop 370 events
 theme: colorful
 mobile-theme: colorful
+collapsible-header: true
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -10,12 +12,6 @@ mobile-theme: colorful
     <title>{{page.title}} | {{site.title}}</title>
   </head>
   <body>
-    <div class="banner">
-      <div class="container">
-        <h3 class="size8 hide-mobile">Payments</h3>
-        <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
-      </div>
-    </div>
     <div class="banner red">
       <div class="container">
         <p>Trying to recharter? Pay on the recharter page, not here.</p>
