--- a/recharter.html
+++ b/recharter.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Recharter
+title: Annual Recharter
 theme: colorful
-mobile-theme: light
+mobile-theme: colorful
 ---
 <!DOCTYPE html>
 <html lang="en">
