--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -1,8 +1,9 @@
 ---
-layout: collapsing_header
+layout: default
 title: Campout Schedule and Local Events
 theme: colorful
 mobile-theme: light
+collapsible-header: true
 ---
 <!DOCTYPE html>
 <html lang="en">
