--- a/faqs.html
+++ b/faqs.html
@@ -1,8 +1,9 @@
 ---
-layout: collapsing_header
+layout: default
 title: Frequently Asked Questions
 theme: colorful
 mobile-theme: light
+collapsible-header: true
 ---
 <!DOCTYPE html>
 <html lang="en">
