--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ mobile-theme: light
           <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='camps-adventure.html'">
             <div>
               <h2 class="carousel-title">High Adventure</h2>
-              <p class="carousel-info">2019</p>
+              <p class="carousel-info">2019 &amp; 2020</p>
               <a href="camps-adventure.html" class="mdc-button standard-light-button mdc-button--outlined">View list</a>
             </div>
           </div>
