--- a/advancement.html
+++ b/advancement.html
@@ -13,7 +13,7 @@ mobile-theme: light
     <div class="banner extra-padding-y center hide-mobile">
       <div class="container">
         <h3 class="size8">Advancement</h3>
-        <p>It is recommended that Scouts attempt to get something signed off towards advancement at each meeting.  Troop 370 has registered Merit Badge Counselors and Scout Instructors to help Scouts advance. View the list below for advancement resources.</p>
+        <p>It is recommended that Scouts attempt to complete one or multiple requirements towards advancement at each meeting.  Troop 370 has registered Merit Badge Counselors and Scout Instructors to help Scouts advance. View the list below for advancement resources.</p>
       </div>
     </div>
     <div class="content-strip">
