alt text for image carousel

--- a/index.html
+++ b/index.html
@@ -85,38 +85,38 @@ mobile-theme: light
   <carousel id="img">
     <div class="container">
       <div class="img-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "lazyLoad": 3, "imagesLoaded": true }'>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/1.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/2.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/3.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/4.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/5.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/6.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/7.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/8.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/9.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/10.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/11.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/12.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/13.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/14.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/15.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/16.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/17.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/18.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/19.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/20.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/21.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/22.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/23.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/24.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/25.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/26.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/27.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/28.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/29.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/30.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/31.jpg" /></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/32.jpg" /></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/1.jpg" alt="Preparing to hike at Okpik"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/2.jpg" alt="Sitting on a tree"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/3.jpg" alt="Whitewater rafting on the Nantahala River"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/4.jpg" alt="A group of first-year scouts at Woodruff Scout Reservation during sumer camp"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/5.jpg" alt="Running around at the S-Games campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/6.jpg" alt="Scuba diving"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/7.jpg" alt="Group picture of Troop 370 scouts that attended the National Scout Jamboree in 2017"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/8.jpg" alt="Mountain biking"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/9.jpg" alt="Costumes for the cracker barrel at summer camp"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/10.jpg" alt="Group of scouts at a waterfall"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/11.jpg" alt="Scouts huddled together to avoid the cold wind on the short boat trip to Dog Island"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/12.jpg" alt="Sharing the peacelight"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/13.jpg" alt="Orienteering in the snow"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/14.jpg" alt="Lunch break at a service project to refurbish the front area of High Point Episcopal Community Church"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/15.jpg" alt="Removing English Ivy from the playground at High Point Episcopal Community Church"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/16.jpg" alt="Canoeing at Norther Tier High Adventure BAse"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/17.jpg" alt="Northern Tier Crew - 2017"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/18.jpg" alt="Whitewater rafting on the Nantahala River"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/19.jpg" alt="Playing Ga-Ga at Woodruff"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/20.jpg" alt="Campfire stories"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/21.jpg" alt="Learning how to take care of a car at Automotive Maintenance merit badge"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/22.jpg" alt="Getting equipment for Northern Tier"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/23.jpg" alt="Working at the Pine Straw Sale"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/24.jpg" alt="Snow Bear primitive skills campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/25.jpg" alt="Preparing to cook at the Scout Weekend campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/26.jpg" alt="Sitting at the top of a mountain in Georgia"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/27.jpg" alt="Climbing on an old tree at Dog Island"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/28.jpg" alt="Lined up for the morning flag ceremony at Woodruff Summer Camp"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/29.jpg" alt="Eating chicken and dumplings for dinner"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/30.jpg" alt="Attempting to start a fire by friction"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/31.jpg" alt="Dinner on a campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/32.jpg" alt="Rock climbing"></div>
       </div>
     </div>
   </carousel>
