Remove 'Boy' from 'Boy Scout'

--- a/faqs.html
+++ b/faqs.html
@@ -29,7 +29,7 @@ collapsible-header: true
         <p>
           <ol>
             <li>Complete all requirements except Scoutmaster Conference and Board of Review and have them signed off by a qualified Scout or Adult.</li>
-            <li>Show up to the next meeting in full Class A (Boy Scout Shirt, Belt, Pants, Socks, and Neckerchief).</li>
+            <li>Show up to the next meeting in a complete field uniform (Shirt, Belt, Pants, Socks, and Neckerchief).</li>
             <li>Talk to Mr. Evans as soon as you are dismissed and ask for a Scoutmaster Conference for your rank. Then, when finished, you will go to a Board of Review.</li>
           </ol>
         </p>
