--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -41,7 +41,7 @@ mobile-theme: light
                 <label for="textarea1">Message</label>
               </div>
             </div>
-            <button class="btn waves-effect waves-light contact-submit-button" type="submit" name="action">Submit</button>
+            <button class="btn waves-effect waves-light contact-submit-button" type="submit" name="action" style="background: white;color: #003f87;">Submit</button>
             <input type="hidden" name="_next" value="submission-received.html#contact" />
             <input type="hidden" name="_format" value="plain" />
           </form>
