--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@ mobile-theme: light
             </div>
           </div>
         </div>
+        <div class="carousel-cell" id="mcard3">
+          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503'">
+            <div>
+              <h2 class="carousel-title">Scout Weekend</h2>
+              <p class="carousel-info">February 9-10</p>
+              <a href="campout-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
+            </div>
+          </div>
+        </div>
         <div class="carousel-cell" id="mcard2">
           <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='http://pinestraw.troop370atlanta.org'" style="background: rgba(0,0,0,0.6);">
             <div>
