--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ mobile-theme: light
           </div>
         </div>
         <div class="carousel-cell" id="mcard3">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503'">
+          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='campout-sign-up_encrypted.html'">
             <div>
               <h2 class="carousel-title">Scout Weekend</h2>
               <p class="carousel-info">February 9-10</p>
