free scroll for main-carousel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ mobile-theme: light
 
   <carousel id="main">
     <div class="container">
-      <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "pageDots": false }'>
+      <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         <div class="carousel-cell" id="mcard6">
           <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503'">
             <div>
