--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -14,36 +14,85 @@ mobile-theme: light
       <div class="container">
         <subtitle>Webmaster: Jack Buehner</subtitle>
         <div class="row">
-          <form class="col s12" name="contact-webmaster" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
-            <div class="row">
-              <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate" name="First_Name" required>
-                <label for="first_name">First Name</label>
-              </div>
-              <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate" name="Last_Name" required>
-                <label for="last_name">Last Name</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s6 s6-spread">
-                <input id="email" type="email" class="validate" name="_replyto" required>
-                <label for="email">Email</label>
-              </div>
-              <div class="input-field col s6 s6-spread">
-                <input id="subject" type="text" class="validate" name="_subject">
-                <label for="subject">Subject</label>
+          <form name="contact-webmaster" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
+            <div class="text-field-row text-field-row-fullwidth">
+              <div class="text-field-container">
+                <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--textarea">
+                  <textarea id="text-field-fullwidth-textarea-helper" rows="1" class="mdc-text-field__input" name="First_Name" required></textarea>
+                  <div class="mdc-notched-outline mdc-notched-outline--upgraded">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch" style="">
+                      <label class="mdc-floating-label" for="text-field-fullwidth-textarea-helper" style="">First Name</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <textarea id="textarea1" class="materialize-textarea validate" name="message" required></textarea>
-                <label for="textarea1">Message</label>
+            <div class="text-field-row text-field-row-fullwidth">
+              <div class="text-field-container">
+                <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--textarea">
+                  <textarea id="text-field-fullwidth-textarea-helper" rows="1" class="mdc-text-field__input" name="Last_Name" required></textarea>
+                  <div class="mdc-notched-outline mdc-notched-outline--upgraded">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch" style="">
+                      <label class="mdc-floating-label" for="text-field-fullwidth-textarea-helper" style="">Last Name</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                  </div>
+                </div>
               </div>
             </div>
-            <button class="btn waves-effect waves-light contact-submit-button" type="submit" name="action" style="background: white;color: #003f87;">Submit</button>
-            <input type="hidden" name="_next" value="submission-received.html#contact" />
-            <input type="hidden" name="_format" value="plain" />
+            <div class="text-field-row text-field-row-fullwidth">
+              <div class="text-field-container">
+                <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--textarea">
+                  <textarea id="text-field-fullwidth-textarea-helper" rows="1" class="mdc-text-field__input" name="_replyto" required></textarea>
+                  <div class="mdc-notched-outline mdc-notched-outline--upgraded">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch" style="">
+                      <label class="mdc-floating-label" for="text-field-fullwidth-textarea-helper" style="">Email</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="text-field-row text-field-row-fullwidth">
+              <div class="text-field-container">
+                <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--textarea">
+                  <textarea id="text-field-fullwidth-textarea-helper" rows="1" class="mdc-text-field__input" name="_subject"></textarea>
+                  <div class="mdc-notched-outline mdc-notched-outline--upgraded">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch" style="">
+                      <label class="mdc-floating-label" for="text-field-fullwidth-textarea-helper" style="">Subject</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="text-field-row text-field-row-fullwidth">
+              <div class="text-field-container">
+                <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--textarea">
+                  <textarea id="text-field-fullwidth-textarea-helper" rows="6" class="mdc-text-field__input" name="message" required></textarea>
+                  <div class="mdc-notched-outline mdc-notched-outline--upgraded">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch" style="">
+                      <label class="mdc-floating-label" for="text-field-fullwidth-textarea-helper" style="">Message</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="text-field-row text-field-row-fullwidth">
+              <button class="mdc-button standard-dark-button mdc-button--outlined" type="submit" name="action">
+                <span class="mdc-button__label">Submit</span>
+              </button>
+              <input type="hidden" name="_next" value="submission-received.html" />
+              <input type="hidden" name="_format" value="plain" />
+              <input type="hidden" name="_cc" value="hgevans@bellsouth.net,iconherder@gmail.com" />
+            </div>
           </form>
         </div>
       </div>
