--- a/index.html
+++ b/index.html
@@ -26,60 +26,34 @@ mobile-theme: light
   <carousel id="main">
     <div class="container">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
-        <div class="carousel-cell" id="mcard6">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503'">
-            <div>
-              <h2 class="carousel-title">Merit Badge Clinic</h2>
-              <p class="carousel-info">February 9; 8:30 AM - 3:00 PM</p>
-              <a href="https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-cell" id="mcard3">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='campout-sign-up_encrypted.html'">
-            <div>
-              <h2 class="carousel-title">Scout Weekend</h2>
-              <p class="carousel-info">February 9-10</p>
-              <a href="campout-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-cell" id="mcard2">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='http://pinestraw.troop370atlanta.org'" style="background: rgba(0,0,0,0.6);">
-            <div>
-              <h2 class="carousel-title">Pine Straw Sale</h2>
-              <p class="carousel-info">Order by March 13</p>
-              <a href="http://pinestraw.troop370atlanta.org" class="mdc-button standard-light-button mdc-button--outlined">Online store</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-cell" id="mcard4">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='woodruff-sc-sign-up_encrypted.html'">
-            <div>
-              <h2 class="carousel-title">Woodruff Summer Camp</h2>
-              <p class="carousel-info">June 9-15</p>
-              <a href="woodruff-sc-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-cell" id="mcard5">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='summit-sc-sign-up_encrypted.html'">
-            <div>
-              <h2 class="carousel-title">Summit Summer Camp</h2>
-              <p class="carousel-info">June 23-29</p>
-              <a href="summit-sc-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-cell" id="mcard1">
-          <div class="carousel-text-card ripple-dark-bg ripple-mobile" onclick="location.href='camps-adventure.html'">
-            <div>
-              <h2 class="carousel-title">High Adventure</h2>
-              <p class="carousel-info">2019</p>
-              <a href="camps-adventure.html" class="mdc-button standard-light-button mdc-button--outlined">View list</a>
-            </div>
-          </div>
-        </div>
+        {% include main-carousel-card.html
+            card-title="Pine Straw Sale"
+            card-subtitle="Order by March 13"
+            card-href="http://pinestraw.troop370atlanta.org"
+            button-text="Online store"
+            background-image="/src/banner images/pineneedles_l.jpg"
+        %}
+        {% include main-carousel-card.html
+            card-title="Woodruff Summer Camp"
+            card-subtitle="June 9-15"
+            card-href="woodruff-sc-sign-up_encrypted.html"
+            button-text="Sign up"
+            background-image="/src/banner images/wsr-sign-far.jpg"
+        %}
+        {% include main-carousel-card.html
+            card-title="Summit Summer Camp"
+            card-subtitle="June 23-29"
+            card-href="summit-sc-sign-up_encrypted.html"
+            button-text="Sign up"
+            background-image="/src/banner images/summit-sign.webp"
+        %}
+        {% include main-carousel-card.html
+            card-title="High Adventure"
+            card-subtitle="2019"
+            card-href="camps-adventure.html"
+            button-text="View list"
+            background-image="/src/banner images/scout shadow on top of mountain with sunset.jpg"
+        %}
       </div>
     </div>
   </carousel>
