fixes a random capitalization error

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ mobile-theme: light
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/13.jpg" alt="Orienteering in the snow"></div>
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/14.jpg" alt="Lunch break at a service project to refurbish the front area of High Point Episcopal Community Church"></div>
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/15.jpg" alt="Removing English Ivy from the playground at High Point Episcopal Community Church"></div>
-        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/16.jpg" alt="Canoeing at Norther Tier High Adventure BAse"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/16.jpg" alt="Canoeing at Norther Tier High Adventure Base"></div>
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/17.jpg" alt="Northern Tier Crew - 2017"></div>
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/18.jpg" alt="Whitewater rafting on the Nantahala River"></div>
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/19.jpg" alt="Playing Ga-Ga at Woodruff"></div>
