rename "applications" to "General Applications"

--- a/forms-documents.html
+++ b/forms-documents.html
@@ -19,7 +19,7 @@ mobile-theme: light
       <div class="container">
         <div class="split50">
           <div>
-            <h4>Applications</h4>
+            <h4>General Applications</h4>
             <p><a href="src/documents/Merit Badge Counselor Application.pdf">Merit Badge Counselor Application</a></p>
             <p><a href="https://www.scouting.org/resources/info-center/forms/">BSA Membership Forms</a></p>
             <p><a href="src/documents/Youth Application Instructions.pdf">Youth Application Instructions</a></p>
