add leadership applications section

--- a/forms-documents.html
+++ b/forms-documents.html
@@ -26,6 +26,16 @@ mobile-theme: light
             <p><a href="src/documents/Adult Application Instructions.pdf">Adult Application Instructions</a></p>
           </div>
           <div>
+            <h4>Leadership Applications/Agreements</h4>
+            <p><a href="src/documents/leadership-applications/Troop 370 Senior Patrol Leader.docx">Senior Patrol Leader</a></p>
+            <p><a href="src/documents/leadership-applications/Troop 370 Assistant Senior Patrol Leader.docx">Assistant Senior Patrol Leader</a></p>
+            <p><a href="src/documents/leadership-applications/Troop 370 Patrol Leader.docx">Patrol Leader</a></p>
+            <p><a href="src/documents/leadership-applications/Troop 370 Quartermaster.docx">Quartermaster</a></p>
+            <p><a href="src/documents/leadership-applications/Troop 370 Instructor.docx">Instructor</a></p>
+            <p><a href="src/documents/leadership-applications/Troop 370 Outdoor Ethics Guide.docx">Outdoor Ethics Guide</a></p>
+            <p><a href="src/documents/leadership-applications/Troop 370 Webmaster.docx">Webmaster</a></p>
+          </div>
+          <div>
             <h4>Health & Medical Forms</h4>
             <p><a href="src/documents/Parts A, B, and C.pdf">Parts A, B, and C</a></p>
             <p><a href="src/documents/Part D.pdf">Part D (Only for High Adventure)</a></p>
