style standalone links as buttons per #48.

--- a/advancement.html
+++ b/advancement.html
@@ -23,13 +23,13 @@ mobile-theme: light
             <h4>Merit Badge Couselors</h4>
             <p>A list of merit badge counselors and their contact information can be found in the password protected members section of our site.</p>
             <p></p>
-            <p><a href="/mb-counselors_encrypted.html">Go to Merit Badge Counselors page</a></p>
+            <p><a href="/mb-counselors_encrypted.html" class="mdc-button button-adjust">Go to Merit Badge Counselors page</a></p>
           </div>
           <div>
             <h4>Merit Badge Clinics</h4>
             <p>Sign up for Merit Badge classes at meritbadge.info</p>
             <p></p>
-            <p><a href="http://meritbadge.info">Go to meritbadge.info</a></p>
+            <p><a href="http://meritbadge.info" class="mdc-button button-adjust">Go to meritbadge.info</a></p>
           </div>
         </div>
         <div class="split50">
@@ -37,13 +37,13 @@ mobile-theme: light
             <h4>TroopMaster Web</h4>
             <p>TroopMaster Web allows each scout to track his advancement online.</p>
             <p></p>
-            <p><a href="http://tmweb.troopmaster.com/mysite/troop370atl">Go to TroopMaster Web</a></p>
+            <p><a href="http://tmweb.troopmaster.com/mysite/troop370atl" class="mdc-button button-adjust">Go to TroopMaster Web</a></p>
           </div>
           <div>
             <h4>Advancement Requirements</h4>
             <p>Current requirements for rank advancement and other awards can be found on scouting.org</p>
             <p></p>
-            <p><a href="https://www.scouting.org/scoutsource/boyscouts/advancementandawards.aspx">View Advancement Requirements</a></p>
+            <p><a href="https://www.scouting.org/scoutsource/boyscouts/advancementandawards.aspx" class="mdc-button button-adjust">View Advancement Requirements</a></p>
           </div>
         </div>
       </div>
