--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -16,7 +16,7 @@ collapsible-header: true
         <h4>Monthy Campout Schedule</h4>
         <p>Troop 370 schedules monthly campouts throughout the “camping year”, together with Winter Camp and Summer Camp.  Find links to campout signup forms on the Troop's Google Calendar or Facebook page.  On the calendar, click on the campout/event to see details about signing up; in order to view additional details and links about the campout, you can also click "more details" after the campout window opens within the calendar.</p>
         <p></p>
-        <p><a href="./calendar_encrypted.html#members">Click here to go to the Troop's Google Calendar</a></p>
+        <p><a href="./calendar_encrypted.html#members" class="mdc-button button-adjust">Go to Troop 370's Google Calendar</a></p>
         <p></p>
         <span class="plist">
           <p style="font-weight:bold;">2018-2019 Camping Schedule</p>
