--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -38,7 +38,7 @@ collapsible-header: true
         <h4>Sea Base at St. Thomas, US Virgin Islands</h4>
         <p>Troop: June 24 - 30, 2019<br>Venturing: July 7 - 13, 2019<br>
         <br>Sea Base St. Thomas will allow Scouts to travel to the tropics and experience the allure of the Virgin Islands. Here the tradewinds blow and the territories of St. Thomas and St. John offer some of the best sailing and snorkeling in the Caribbean.<br>
-        <br><a href="sea-base-troop-2019-sign-up_encrypted.html" class="mdc-button button-adjust" style="margin-right:8px;">Join the waitlist for Sea Base with Troop 370</a><a href="sea-base-crew-2019-sign-up_encrypted.html" class="mdc-button">Join the waitlist for Sea Base with Troop 370</a></p>
+        <br><a href="sea-base-troop-2019-sign-up_encrypted.html" class="mdc-button button-adjust" style="margin-right:8px;">Join waitlist for Sea Base - Troop 370</a><a href="sea-base-crew-2019-sign-up_encrypted.html" class="mdc-button button-adjust">Join waitlist for Sea Base - Crew 370</a></p>
       </div>
     </div>
     <div class="content-strip">
@@ -46,7 +46,7 @@ collapsible-header: true
         <h4>Philmont Scout Ranch at Cimarron, NM</h4>
         <p>Troop: June 28 - July 11, 2019; July 16 - 29, 2019<br>Venturing: July 5 - 18, 2019<br>
         <br>Philmont Scout Ranch provides an unforgettable adventure in backpacking, with land along hundreds of miles of rugged, rocky trails. Philmont Scout Ranch programs feature the best of the Old West - horseback riding, burro packing, gold panning, chuckwagon dinners and interpretive history - with exciting challenges for today, such as rock climbing, burro racing, mountain biking and .30-06 rifle shooting. It's an unbeatable recipe for fast-moving fun and the outdoors.<br>
-        <br><a href="philmont-troop-2019-sign-up_encrypted.html" class="mdc-button button-adjust" style="margin-right:8px;">Join the waitlist for Philmont with Troop 370</a><a href="philmont-crew-2019-sign-up_encrypted.html" class="mdc-button button-adjust">Join the waitlist for Philmont with Crew 370</a></p>
+        <br><a href="philmont-troop-2019-sign-up_encrypted.html" class="mdc-button button-adjust" style="margin-right:8px;">Join waitlist for Philmont - Troop 370</a><a href="philmont-crew-2019-sign-up_encrypted.html" class="mdc-button button-adjust">Join waitlist for Philmont - Crew 370</a></p>
       </div>
     </div>
     <div class="content-strip last-in-section">
@@ -73,7 +73,7 @@ collapsible-header: true
         <h4>Philmont Scout Ranch at Cimarron, NM</h4>
         <p>June 27 - July 10, 2020<br>
         <br>Philmont offers 140,177 acres of rugged mountain wilderness in the Rocky Mountains in northeastern New Mexico. In addition to providing an unforgettable adventure in backpacking across miles of rugged, rocky trails, Philmont Scout Ranch offers programs that feature the best of the Old West—horseback riding, burro packing, gold panning, chuckwagon dinners, and interpretive history—with exciting challenges for today such as rock climbing, mountain biking, and sport shooting. It’s an unbeatable recipe for fast-paced fun in the outdoors.</br>
-        <br><a href="high-adventure-2020-sign-up_encrypted.html" class="mdc-button button-adjust">Sign up for Philmont with Troop 370</a></p>
+        <br><a href="high-adventure-2020-sign-up_encrypted.html" class="mdc-button button-adjust">Sign up for Philmont</a></p>
       </div>
     </div>
     <div class="content-strip">
@@ -81,7 +81,7 @@ collapsible-header: true
         <h4>New River Trek at Summit Bechtel Reserve, WV</h4>
         <p>June 4 - 11, 2020<br>
         <br>This is a 50-mile paddle trek on the New River. You will navigate the upper portion of the river in inflatable kayaks (one or two-man) called “duckies”. This portion of the river includes Class I to III rapids. The final whitewater day in the Lower Canyon is a rafting experience and includes Class III to V rapids. Crews camp along the river through the New River Gorge. Summit Bechtel Reserve requires all participants to be 14 years old by the first day of the trek.</br>
-        <br><a href="high-adventure-2020-sign-up_encrypted.html" class="mdc-button button-adjust">Sign up for New River Trek with Troop 370</a></p>
+        <br><a href="high-adventure-2020-sign-up_encrypted.html" class="mdc-button button-adjust">Sign up for New River Trek</a></p>
       </div>
     </div>
     <div class="content-strip">
@@ -89,7 +89,7 @@ collapsible-header: true
         <h4>Northern Tier National High Adventure Base at Atikokan, Ontario</h4>
         <p>July 23 - August 2, 2020<br>
         <br>Explore millions of acres of pristine lakes, meandering rivers, dense forests and wetlands in Northwest Ontario on a nine day canoeing adventure in Quetico Provential Park. North America’s Canoe Country, a vast series of navigable lakes and rivers spanning thousands of square miles, is one of the last great wildernesses on the continent.</br>
-        <br><a href="high-adventure-2020-sign-up_encrypted.html" class="mdc-button button-adjust">Sign up for Northern Tier with Troop 370</a></p>
+        <br><a href="high-adventure-2020-sign-up_encrypted.html" class="mdc-button button-adjust">Sign up for Northern Tier</a></p>
       </div>
     </div>
   </body>
