--- a/submit-announcement.html
+++ b/submit-announcement.html
@@ -10,6 +10,11 @@ mobile-theme: light
     <title>{{page.title}} | {{site.title}}</title>
   </head>
   <body>
+    <div class="banner" style="background-color:rgba(19,72,133,0.2);">
+      <div class="container">
+        <p style="color:black;text-transform:uppercase;font-weight:500;letter-spacing:0.05em;">Submissions to this form are not used for announcements. This page is hidden. This form is only available for testing purposes.</p>
+      </div>
+    </div>
     <div class="content-strip">
       <div class="container">
         <div class="row">
